--- a/boardGameCafe/src/main/webapp/css/style_ahn.css
+++ b/boardGameCafe/src/main/webapp/css/style_ahn.css
@@ -2,11 +2,9 @@
 
 body{
 	width:960px;
-	margin:0 auto;
 	background:#E6E6E6;
 }
 div.page-main{
-	width:90%;
 	margin-bottom:10px;
 	margin-top:10px;
 	border:1px solid #FF0000; 
@@ -15,20 +13,28 @@ div.cart-main{
 	float:left;
 	width:65%;
 	background:#FFFFFF;
-	border:1px solid #000;
+	border:1px solid #fff;
 }
 div.cart-side{
 	float:right;
 	width:30%;
-	border:1px solid #000;
+	border:1px solid #fff;
 }
 div.cart-sub{
 	float:none;
 	background:#FFFFFF;
-	border:1px solid #000;
+	border:1px solid #fff;
 }
 div.price-total{
 	float:none;
 	background:#FFFFFF;
-	border:1px solid #000;
+	border:1px solid #fff;
+}
+div.content-photo{
+	height:1070px;
+	align:center;
+	background-image: url('../images/soon/background.jpg');
+	background-repeat:no-repeat;;
+	background-size:100%; 
+	background-attachment:scroll;
 }
