--- a/boardGameCafe/src/main/webapp/css/style_ddk.css
+++ b/boardGameCafe/src/main/webapp/css/style_ddk.css
@@ -1,281 +1,286 @@
-@charset "UTF-8";
 /* 공통
 ------------------- */
 .result-display-x{
-	width:900px;
-	height:300px;
-	margin-left:20px;
-	margin-right:20px;
-	margin-top:40px;
-	border:1px solid #000;
-	
-	display:flex;
-	align-items:center;/*세로 정렬*/
-	justify-content:center;/*가로 정렬*/
+   width:900px;
+   height:300px;
+   margin-left:20px;
+   margin-right:20px;
+   margin-top:40px;
+   border:1px solid #000;
+   
+   display:flex;
+   align-items:center;/*세로 정렬*/
+   justify-content:center;/*가로 정렬*/
 }
 ul{
-	list-style:none;
+   list-style:none;
 }
 /* MY페이지
 ------------------- */
+.page-main{
+   width:100%;
+}
 .mypage-div{
-	padding:5px;
+   padding:5px;
 }
 .my-photo{
-	
-	object-fit:cover;
-	object-position:top;
-	border-radius:50%;
+   
+   object-fit:cover;
+   object-position:top;
+   border-radius:50%;
 }
 .bluebtn{
-	background:#2bac5f;
-	color:white;
-	border-style:none;
-	border-radius:15px;
-	cursor:pointer
+   background:#2bac5f;
+   color:white;
+   border-style:none;
+   border-radius:15px;
+   cursor:pointer
 }
 .redbtn{
-	background:#bb2d3b;
-	color:white;
-	border-style:none;
-	border-radius:15px;
-	cursor:pointer
+   background:#bb2d3b;
+   color:white;
+   border-style:none;
+   border-radius:15px;
+   cursor:pointer
 }
-.photo-box{
-	width:200px;
-	float:left;
+#myname{
+	font-size: 2em;
+	margin-block-start:0px;
+	margin-block-end:5px;
 }
-.photo-box-right{
-	width:250px;
+#div01{
 	float:left;
-	padding-top:30px;
+	width:49%;
+	text-align:right;
+}
+
+#div02{
+	float:right;
+	width:49%;
+	display:flex;
 }
 .float-end{
-	clear:both;
+   clear:both;
 }
 .allbox1{
-	margin-left:250px;
-}
-.allbox1back{
-	width:100%;
-	height:300px;
-	padding-top:50px;
-	background-color:#cce0de;
+   width:100%;
+   height:350px;
+   /* padding-top:50px; */
+   background-color:#cce0de;
+   margin-left:0px;
+   text-align: center;
+   display:flex;
+   align-items:center;
+   justify-content:center;
 }
 .allbox2{
-	margin-left:150px;
-	margin-top:100px;
+   margin:auto;
 }
-
-
-
-
 .mypage-inline-block ul li{
-	display:inline-block;
+   display:inline-block;
 }
-
-
-
-
-
-
-.mypage-line1{
+.mypageblock01{
+	margin-top:100px;
+	display:flex;
+	justify-content:center;
+}
+#mypage01{
 	border:4px solid lightgrey;
-	width:150px;
-	height:150px;
-	margin-right:20px;
-	border-radius:15px;
+    width:150px;
+    height:150px;
+    margin-right:20px;
+    border-radius:15px;
 }
-
-
-
+#mypage02{
+	border:4px solid lightgrey;
+    width:150px;
+    height:150px;
+    border-radius:15px;
+}
 .mypage-line1-a{
-	
-	width:100%;
-	display: flex;
-	justify-content: center;
-	padding-top:10px;
+   width:100%;
+   display: flex;
+   justify-content: center;
+   padding-top:10px;
 }
 .redfont{
-	color:red;
-	font-size:30px;
+   color:red;
+   font-size:30px;
 }
 
 .bluefont{
-	color:blue;
-	font-size:30px;
+   color:blue;
+   font-size:30px;
 }
-
-
-
-
-
-
+.mypageblock02{
+	display:flex;
+	justify-content:center;
+}
+#mypageul{
+	padding:0px;
+}
 .mypage-line2{
-	border:4px solid lightgrey;
-	width:500px;
-	height:50px;
-	margin-bottom:20px;
-	border-radius:15px;
+   border:4px solid lightgrey;
+   width:500px;
+   height:50px;
+   margin-bottom:20px;
+   border-radius:15px;
 }
 
 
 .Withdrawal{
-	float:right;
+   float:right;
 }
 
 
 /* 회원정보 수정 */
 .photo-box-modify{
-	width:250px;
-	float:left;
-	margin-left:250px;
-	margin-bottom:50px;
+   width:250px;
+   float:left;
+   margin-left:250px;
+   margin-bottom:50px;
 }
 .photo-box-right-modify{
-	width:250px;
-	float:left;
-	padding-top:30px;
+   width:250px;
+   float:left;
+   padding-top:30px;
 }
 .float-end{
-	clear:both;
-}
-.allbox1{
-	margin-left:250px;
+   clear:both;
 }
 .passwd-change-btn{
-	float:right;
+   float:right;
 }
 #modify_form{
-	width:600px;
-	margin:0 auto;
-	padding:10px 10px 10px 30px;
+   width:600px;
+   margin:0 auto;
+   padding:10px 10px 10px 30px;
 }
 #modify_form ul li{
-	margin-bottom:10px;
+   margin-bottom:10px;
 }
 .bluebtn-modify{
-	width:450px;
-	height:35px;
-	background:blue;
-	color:white;
-	border-style:none;
-	cursor:pointer
+   width:450px;
+   height:35px;
+   background:blue;
+   color:white;
+   border-style:none;
+   cursor:pointer
 }
 /* 테이블 공통 */
 .tablestyle{
-	width:900px;
-	border-collapse:collapse;
-	border-top:1px solid #000;
-	border-bottom:1px solid #000;
-	margin-top:30px;
-	margin-left:28px;
-	text-align:center;
+   width:900px;
+   border-collapse:collapse;
+   border-top:1px solid #000;
+   border-bottom:1px solid #000;
+   margin-top:30px;
+   margin-left:28px;
+   text-align:center;
 }
 .tablestyle th{
-	border-top:1px solid #000;
-	border-bottom:1px solid #000;
-	padding:5px;
-	background-color:lightgrey;
+   border-top:1px solid #000;
+   border-bottom:1px solid #000;
+   padding:5px;
+   background-color:lightgrey;
 }
 .tablestyle td{
-	border-top:1px solid #000;
-	border-bottom:1px solid #000;
-	padding:5px;
-	height:50px;
-	
+   border-top:1px solid #000;
+   border-bottom:1px solid #000;
+   padding:5px;
+   height:50px;
+   
 }
 .pageup{
-	height:50px;
+   height:50px;
 }
 .pagebottom{
-	height:150px;
+   height:150px;
 }
 /* 내가 쓴 문의 */
 .inqutable-1{
-	width:200px;
+   width:200px;
 }
-.inqutable-3{	
-	width:200px;
+.inqutable-3{   
+   width:200px;
 }
 /* 예약 내역 */
 .restable-1{
-	width:150px;
+   width:150px;
 }
 .restable-2{
-	width:100px;
+   width:100px;
 }
 .restable-4{
-	width:150px;
+   width:150px;
 }
 .restable-5{
-	width:100px;
+   width:100px;
 }
 .text-align-center{
-	text-align:center;	
+   text-align:center;   
 }
 .todayreserve{
-	border:4px solid black;
-	margin:10px;
+   border:4px solid black;
+   margin:10px;
 }
 .todayreserve-imgbox{
-	text-align:center;
+   text-align:center;
 }
 .todayreserve-imgbox img{
-	margin:10px;
+   margin:10px;
 }
 .todayreserve-detailbox{
-	text-align:center;
-	border:1px solid black;
-	margin:30px;
+   text-align:center;
+   border:1px solid black;
+   margin:30px;
 }
 .todayreserve-detailbox b{
-	font-size:20px;
+   font-size:20px;
 }
 .my-photo{
-	object-fit:cover;
-	object-position:top;
-	border-radius:50%;
+   object-fit:cover;
+   object-position:top;
+   border-radius:50%;
 }
 .redfont-reserve{
-	color:red;
-	font-size:30px;
+   color:red;
+   font-size:30px;
 }
 
 /* 내가 쓴 리뷰 */
 .revtable-1{
-	width:200px;
+   width:200px;
 }
 .revtable-3{
-	width:150px;
+   width:150px;
 }
 
 /* 회원탈퇴 */
 .redbtn-delete{
-	width:400px;
-	height:40px;
-	background:#bb2d3b;
-	color:white;
-	border-style:none;
-	cursor:pointer
+   width:400px;
+   height:40px;
+   background:#bb2d3b;
+   color:white;
+   border-style:none;
+   cursor:pointer
 }
 .helpbox{
-	float:right;
-	margin-top:10px;
-	margin-right:100px;
+   float:right;
+   margin-top:10px;
+   margin-right:100px;
 }
 .photo-box-delete{
-	width:200px;
-	margin-left:330px;
-	margin-bottom:50px;
+   width:200px;
+   margin-left:330px;
+   margin-bottom:50px;
 }
 #delete_form{
-	width:600px;
-	margin:0 auto;
-	padding:10px 10px 10px 30px;
+   width:600px;
+   margin:0 auto;
+   padding:10px 10px 10px 30px;
 }
 #delete_form ul li{
-	margin-bottom:10px;
+   margin-bottom:10px;
 }
 
 
@@ -322,89 +327,89 @@ ul{
 전체 레이아웃
 ------------------------
 body{
-	width:960px;
-	margin:0 auto;
-	background:#E6E6E6;
+   width:960px;
+   margin:0 auto;
+   background:#E6E6E6;
 }
 a:link{
-	text-decoration:none;
-	color:#000000;
+   text-decoration:none;
+   color:#000000;
 }
 a:visited{
-	text-decoration:none;
-	color:#000000;
+   text-decoration:none;
+   color:#000000;
 }
 a:hover{
-	text-decoration:none;
-	color:#6C6C6C;
+   text-decoration:none;
+   color:#6C6C6C;
 }
 
 페이지 레이아웃
 ---------------------
 .page-main{
-	background:#FFFFFF;
-	margin:40px 0;
-	border-radius:5px;
-	box-shadow:0 2px 6px rgba(100,100,100,0.3);
-	min-height:650px;
+   background:#FFFFFF;
+   margin:40px 0;
+   border-radius:5px;
+   box-shadow:0 2px 6px rgba(100,100,100,0.3);
+   min-height:650px;
 }
 .content-main{
-	padding:10px 20px;
+   padding:10px 20px;
 }
 
 공통 메시지
 --------------------
 .result-display{
-	width:400px;
-	height:200px;
-	margin:50px auto;
-	border:1px solid #000;
-	display:flex;하위 요소를 수직으로 쌓을 수 있는 공간을 만듬
-	align-items:center;세로 정렬
-	justify-content:center;가로 정렬	
+   width:400px;
+   height:200px;
+   margin:50px auto;
+   border:1px solid #000;
+   display:flex;하위 요소를 수직으로 쌓을 수 있는 공간을 만듬
+   align-items:center;세로 정렬
+   justify-content:center;가로 정렬   
 }
 
 공통 정렬
 --------------------
 .align-center{
-	text-align:center;
+   text-align:center;
 }
 .align-right{
-	text-align:right;
+   text-align:right;
 }
 
 메뉴
 -------------------
 #main_logo{
-	padding-top:20px;
+   padding-top:20px;
 }
 #main_nav{
-	padding:2px 10px 20px 10px;
-	height:20px;
-	background-color:#C1BFBF;
+   padding:2px 10px 20px 10px;
+   height:20px;
+   background-color:#C1BFBF;
 }
 #main_nav ul{
-	list-style:none;
-	margin:0;
-	padding:0;
+   list-style:none;
+   margin:0;
+   padding:0;
 }
 #main_nav ul li{
-	display:inline-block;
-	width:100px;
-	text-align:center;
-	vertical-align:middle;
-	padding-top:8px;
+   display:inline-block;
+   width:100px;
+   text-align:center;
+   vertical-align:middle;
+   padding-top:8px;
 }
 #main_nav ul li img.my-photo{
-	vertical-align:middle;
+   vertical-align:middle;
 }
 #main_nav ul li.menu-profile{
-	padding-top:5px;
-	width:25px;
+   padding-top:5px;
+   width:25px;
 }
 #main_nav ul li.menu-logout{
-	width:150px;
-	text-align:left;
+   width:150px;
+   text-align:left;
 }
 
 메인
@@ -413,44 +418,44 @@ a:hover{
 공통 등록, 수정 폼
 ----------------------
 form{
-	width:600px;
-	margin:0 auto;
-	border:1px solid #000;
-	padding:10px 10px 10px 30px;
+   width:600px;
+   margin:0 auto;
+   border:1px solid #000;
+   padding:10px 10px 10px 30px;
 }
 form ul li{
-	clear:both;
+   clear:both;
 }
 form ul li label{
-	width:130px;
-	float:left; 태그를 왼쪽으로 정렬
+   width:130px;
+   float:left; 태그를 왼쪽으로 정렬
 }
 ul{
-	list-style:none;
+   list-style:none;
 }
 input{
-	margin-top:4px;
+   margin-top:4px;
 }
 input[type="text"],input[type="password"],input[type="email"]{
-	width:310px;
+   width:310px;
 }
 #register_form input[id="id"]{
-	width:223px;
+   width:223px;
 }
 input[id="zipcode"]{
-	width:205px;
+   width:205px;
 }
 input[type="number"]{
-	width:100px;
+   width:100px;
 }
 .form-notice{
-	margin-left:130px;
+   margin-left:130px;
 }
 
 로그인
 -------------------
 #login_form #id,#login_form #passwd{
-	width:200px;
+   width:200px;
 }
 
 
@@ -458,31 +463,31 @@ input[type="number"]{
 공통 목록
 -------------------
 form#search_form{
-	border:none;
+   border:none;
 }
 ul.search{
-	width:340px;
-	list-style:none;
-	padding:0;
-	margin:0 auto;
+   width:340px;
+   list-style:none;
+   padding:0;
+   margin:0 auto;
 }
 ul.search li{
-	margin:0 0 9px 0;
-	padding:0;
-	display:inline;
+   margin:0 0 9px 0;
+   padding:0;
+   display:inline;
 }
 .list-space{
-	margin-bottom:10px;
+   margin-bottom:10px;
 }
 table{
-	width:100%;
-	border:1px solid #000;
-	border-collapse:collapse;
-	margin-top:5px;
+   width:100%;
+   border:1px solid #000;
+   border-collapse:collapse;
+   margin-top:5px;
 }
 table td,table th{
-	border:1px solid #000;
-	padding:5px;
+   border:1px solid #000;
+   padding:5px;
 }
 
 회원관리 목록
@@ -491,81 +496,80 @@ table td,table th{
 게시판 글 상세
 -------------------
 ul.detail-info{
-	list-style:none;
+   list-style:none;
 }
 ul.detail-info li{
-	display:inline-block;
+   display:inline-block;
 }
 .detail-img{
-	max-width:500px;
+   max-width:500px;
 }
 ul.detail-sub{
-	list-style:none;
-	margin:0;
-	padding:0;
+   list-style:none;
+   margin:0;
+   padding:0;
 }
 ul.detail-sub li{
-	display:inline-block;
-	width:49%;
-	height:50px;
-	vertical-align:middle;
+   display:inline-block;
+   width:49%;
+   height:50px;
+   vertical-align:middle;
 }
 ul.detail-sub li:first-child img{
-	vertical-align:middle;
+   vertical-align:middle;
 }
 ul.detail-sub li:last-child{
-	text-align:right;
-	line-height:250%;
+   text-align:right;
+   line-height:250%;
 }
 #output_fav{
-	cursor:pointer;
+   cursor:pointer;
 }
 div#reply_div{
-	padding:5px 10px 40px 10px;
-	margin-top:10px;
-	background-color:#EEEEEE;
+   padding:5px 10px 40px 10px;
+   margin-top:10px;
+   background-color:#EEEEEE;
 }
 form#re_form{
-	width:650px;
-	border:none;
+   width:650px;
+   border:none;
 }
 span.re-title{
-	color:#000;
-	font-size:12pt;
-	line-height:200%;
+   color:#000;
+   font-size:12pt;
+   line-height:200%;
 }
 span.letter-count{
-	font-size:10pt;
-	color:#999;
+   font-size:10pt;
+   color:#999;
 }
 textarea.rep-content{
-	width:90%;
-	height:50px;
-	margin:10px 10px;
+   width:90%;
+   height:50px;
+   margin:10px 10px;
 }
 div#re_first, div#mre_first{
-	float:left;
-	width:70%;
-	padding-left:15px;
-	margin-bottom:10px;
+   float:left;
+   width:70%;
+   padding-left:15px;
+   margin-bottom:10px;
 }
 div#re_second, div#mre_second{
-	float:left;
-	width:19%;
-	margin-bottom:10px;
+   float:left;
+   width:19%;
+   margin-bottom:10px;
 }
 div#loading{
-	text-align:center;
+   text-align:center;
 }
 div.paging-button{
-	text-align:right;
+   text-align:right;
 }
 div#output{
-	clear:both;
+   clear:both;
 }
 form#mre_form{
-	border:none;
-	margin:5px;
+   border:none;
+   margin:5px;
 }
  */
-
