파일 업로드

--- a/boardGameCafe/src/main/webapp/css/style_seul.css
+++ b/boardGameCafe/src/main/webapp/css/style_seul.css
@@ -1,1 +1,34 @@
-@charset "UTF-8";
+/* 전체 레이아웃
+------------------------*/
+body{
+	width: 1000px;
+	margin: 0 auto;
+	/*background: #9673cd;*/
+	background: #fff;
+}
+
+/* 검색 폼
+--------------------- */
+ul {
+    list-style:none;
+}
+li {
+    float: left;
+}
+
+
+
+/* 페이지 레이아웃
+--------------------- */
+
+/* 공통 메시지
+-------------------- */
+
+/* 공통 정렬
+-------------------- */
+
+/* 메뉴
+------------------- */
+
+/* 메인
+---------------------- */
