--- a/boardGameCafe/src/main/webapp/css/style_hoon.css
+++ b/boardGameCafe/src/main/webapp/css/style_hoon.css
@@ -350,6 +350,7 @@ h4{
 	position:relative;
 	float:left;
 	width:490px;
+	background-color:white;
 }
 .group_visual .group_visual_s{
 	height:322px;
@@ -427,25 +428,30 @@ h4{
 }
 .top_line{
 	height:400px;
-	margin-left:20px;
+	margin-left:0px;
 	margin-right:40px;
 	border-top:1px solid #ebeef0;
+	width:490px;
 }
 .dscc{
 	height:300px;
+	margin-left:10px;
+	margin-right:30px;
+	background-color:white;
 }
 .wrap_inn .wrap_right{
 	display:inline-block;
 	position:relative;
 	float:right;
 	width:490px;
+	background-color:white;
 }
 .section_booking{
 	margin-top:52px;
-	border-top:1px solid #e5e5e5;
-	border-bottom:1px solid #e5e5e5;
-	border-left:1px solid #e5e5e5;
-	border-right:1px solid #e5e5e5;
+	border-top:3px solid #e5e5e5;
+	border-bottom:3px solid #e5e5e5;
+	border-left:3px solid #e5e5e5;
+	border-right:3px solid #e5e5e5;
 }
 
 .group_visuals{
@@ -715,6 +721,52 @@ em{
 .tb_body{
 	width:100px;
 }
+.top_line .item_details{
+	background-color:white;
+}
+.dsccc{
+	background-color:white;
+}
+.date_prev{
+	cursor:pointer;
+}
+.date_next{
+	cursor:pointer;
+}
 
+.in_info.btm{
+	padding:18px 0;
+	position:relative;
+	margin-top:5px;
+}
 
+.in_info{
+	text-align:left;
+}
 
+.in_info .in_info_tit{
+	margin-bottom:7px;
+	padding:0 20px;
+	font-size:16px;
+	color:#F82222;
+	font-weight:800;
+	display:block;
+}
+
+.spr_book {
+    background-image: url(assets/spr_book.06165e4….png);
+    overflow:hidden;
+    display:inline-block;
+    color:transparent;
+    text-indent:100%;
+    white-space:nowrap;
+}
+
+.in_info .in_info_dsc {
+	display:block;
+	padding:0 19px;
+	font-size:13px;
+	color:#666;
+	line-height:18px;
+	word-break:break-word;
+}
