--- a/boardGameCafe/src/main/webapp/css/style_ddk.css
+++ b/boardGameCafe/src/main/webapp/css/style_ddk.css
@@ -1,581 +1,413 @@
 /* 공통
 ------------------- */
-.result-display-x{
-   width:900px;
-   height:300px;
-   margin-left:20px;
-   margin-right:20px;
-   margin-top:40px;
-   border:1px solid #000;
-   
-   display:flex;
-   align-items:center;/*세로 정렬*/
-   justify-content:center;/*가로 정렬*/
+.result-display-x {
+	height: 300px;
+	margin-left: 20px;
+	margin-right: 20px;
+	margin-top: 40px;
+	border: 1px solid #000;
+	display: flex;
+	align-items: center; /*세로 정렬*/
+	justify-content: center; /*가로 정렬*/
 }
-ul{
-   list-style:none;
+
+ul {
+	list-style: none;
 }
 /* MY페이지
 ------------------- */
-.page-main{
-   width:100%;
+.page-main {
+	width: 100%;
 }
-.mypage-div{
-   padding:5px;
+
+.mypage-div {
+	padding: 0px;
 }
-.my-photo{
-   
-   object-fit:cover;
-   object-position:top;
-   border-radius:50%;
+
+.my-photo {
+	object-fit: cover;
+	object-position: top;
+	border-radius: 50%;
 }
-.bluebtn{
-   background:#2bac5f;
-   color:white;
-   border-style:none;
-   border-radius:15px;
-   cursor:pointer
+
+.bluebtn {
+	background: #2bac5f;
+	color: white;
+	border-style: none;
+	border-radius: 15px;
+	cursor: pointer;
+	margin-left:20px;
+	padding:5px;
 }
-.redbtn{
-   background:#bb2d3b;
-   color:white;
-   border-style:none;
-   border-radius:15px;
-   cursor:pointer
+
+.redbtn {
+	background: #bb2d3b;
+	color: white;
+	border-style: none;
+	border-radius: 15px;
+	cursor: pointer;
+	margin:30px;
+	padding:5px;
 }
-#myname{
+
+#myname {
 	font-size: 2em;
-	margin-block-start:0px;
-	margin-block-end:5px;
-}
-#div01{
-	float:left;
-	width:49%;
-	text-align:right;
+	margin-block-start: 0px;
+	margin-block-end: 5px;
+	margin-left:20px;
 }
 
-#div02{
-	float:right;
-	width:49%;
+#div01 {
+	float: left;
+	width: 49%;
+	text-align: right;
+}
+
+#div02 {
+	float: right;
+	width: 48%;
+	display: flex;
+}
+
+.float-end {
+	clear: both;
+}
+
+.allbox1 {
+	width: 100%;
+	height: 350px;
+	background-color: #cce0de;
+	margin-left: 0px;
+	text-align: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.allbox2 {
+	margin: auto;
+}
+
+.mypage-inline-block ul li {
+	display: inline-block;
+}
+
+.mypageblock01 {
+	margin-top: 100px;
+	display: flex;
+	justify-content: center;
+	margin-bottom: 30px;
+}
+
+#mypage01 {
+	border: 4px solid lightgrey;
+	width: 150px;
+	height: 150px;
+	margin-right: 20px;
+	border-radius: 15px;
+}
+
+#mypage02 {
+	border: 4px solid lightgrey;
+	width: 150px;
+	height: 150px;
+	border-radius: 15px;
+}
+
+.mypage-line1-a {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	padding-top: 10px;
+}
+
+.redfont {
+	color: red;
+	font-size: 30px;
+}
+
+.bluefont {
+	color: blue;
+	font-size: 30px;
+}
+
+.mypageblock02 {
+	display: flex;
+	justify-content: center;
+}
+
+#mypageul {
+	padding: 0px;
+}
+
+.mypage-line2 {
+	border: 4px solid lightgrey;
+	width: 500px;
+	height: 50px;
+	margin-bottom: 20px;
+	border-radius: 15px;
 	display:flex;
-}
-.float-end{
-   clear:both;
-}
-.allbox1{
-   width:100%;
-   height:350px;
-   /* padding-top:50px; */
-   background-color:#cce0de;
-   margin-left:0px;
-   text-align: center;
-   display:flex;
-   align-items:center;
-   justify-content:center;
-}
-.allbox2{
-   margin:auto;
-}
-.mypage-inline-block ul li{
-   display:inline-block;
-}
-.mypageblock01{
-	margin-top:100px;
-	display:flex;
-	justify-content:center;
-}
-#mypage01{
-	border:4px solid lightgrey;
-    width:150px;
-    height:150px;
-    margin-right:20px;
-    border-radius:15px;
-}
-#mypage02{
-	border:4px solid lightgrey;
-    width:150px;
-    height:150px;
-    border-radius:15px;
-}
-.mypage-line1-a{
-   width:100%;
-   display: flex;
-   justify-content: center;
-   padding-top:10px;
-}
-.redfont{
-   color:red;
-   font-size:30px;
+	align-items:center;
+	padding-left:15px;
 }
 
-.bluefont{
-   color:blue;
-   font-size:30px;
+.Withdrawal {
+	float: right;
 }
-.mypageblock02{
-	display:flex;
-	justify-content:center;
-}
-#mypageul{
-	padding:0px;
-}
-.mypage-line2{
-   border:4px solid lightgrey;
-   width:500px;
-   height:50px;
-   margin-bottom:20px;
-   border-radius:15px;
-}
-
-
-.Withdrawal{
-   float:right;
-}
-
 
 /* 회원정보 수정 */
-.photo-box-modify{
-   width:250px;
-   float:left;
-   margin-left:250px;
-   margin-bottom:50px;
+.allbox1-modify {
+	width: 100%;
+	height: 350px;
+	background-color: #cce0de;
+	margin-left: 0px;
+	text-align: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
-.photo-box-right-modify{
-   width:250px;
-   float:left;
-   padding-top:30px;
+#div01-modify {
+	float: left;
+	width: 30%;
+	text-align: right;
 }
-.float-end{
-   clear:both;
+
+#div02-modify {
+	float: left;
+	width: 400px;
+	display: flex;
 }
-.passwd-change-btn{
-   float:right;
+.modify-profile{
+	width:300px;
+	padding-left:100px;
 }
-#modify_form{
-   width:600px;
-   margin:0 auto;
-   padding:10px 10px 10px 30px;
+.float-end {
+	clear: both;
 }
-#modify_form ul li{
-   margin-bottom:10px;
+
+.passwd-change-btn {
+	float: right;
+	margin-right:150px;
+	margin-bottom:40px;
 }
-.bluebtn-modify{
-   width:450px;
-   height:35px;
-   background:blue;
-   color:white;
-   border-style:none;
-   cursor:pointer
+
+#modify_form {
+	width: 600px;
+	margin: 0 auto;
+	padding-top: 70px;
+    padding-left: 190px;
+}
+#modify_form ul li {
+	margin-bottom: 10px;
+}
+.modify_form-list{
+	padding-left:75px;
+}
+#phone{
+	margin-left:64px;
+}
+#email{
+	margin-left:80px;
+}
+#zipcode{
+	margin-left:63px;
+}
+#address1{
+	margin-left:96px;
+}
+#address2{
+	margin-left:58px;
+}
+.bluebtn-modify {
+	width: 450px;
+	height: 35px;
+	background: blue;
+	color: white;
+	border-style: none;
+	cursor: pointer
+}
+/* 비밀번호 수정  */ /* 사진, 백그라운드-칼라 -> 회원삭제 거 가져옴  */
+#password_form {
+	width: 600px;
+	margin: 0 auto;
+	padding: 10px 10px 10px 350px;
+}		
+.redbtn-modify {
+	width: 400px;
+	height: 40px;
+	background: #bb2d3b;
+	color: white;
+	border-style: none;
+	cursor: pointer;
+	margin-left:-11%;
+	margin-top:20px;
+}
+#origin_passwd{
+	margin-left:20px;
+}
+#passwd2{
+  	margin-left: 42px;
+}
+#cpasswd2{
+	margin-left: 4px;
+}
+.helpbox-pw {
+	float: right;
+	margin-top: 10px;
+	margin-right: 267px;
+	margin-bottom: 40px;
 }
 /* 테이블 공통 */
-.tablestyle{
-   width:900px;
-   border-collapse:collapse;
-   border-top:1px solid #000;
-   border-bottom:1px solid #000;
-   margin-top:30px;
-   margin-left:28px;
-   text-align:center;
+.tablestyle {
+	width: 900px;
+	border-collapse: collapse;
+	border-top: 1px solid #000;
+	border-bottom: 1px solid #000;
+	margin-top: 30px;
+	margin-left: 28px;
+	text-align: center;
 }
-.tablestyle th{
-   border-top:1px solid #000;
-   border-bottom:1px solid #000;
-   padding:5px;
-   background-color:lightgrey;
+
+.tablestyle th {
+	border-top: 1px solid #000;
+	border-bottom: 1px solid #000;
+	padding: 5px;
+	background-color: lightgrey;
 }
-.tablestyle td{
-   border-top:1px solid #000;
-   border-bottom:1px solid #000;
-   padding:5px;
-   height:50px;
-   
+
+.tablestyle td {
+	border-top: 1px solid #000;
+	border-bottom: 1px solid #000;
+	padding: 5px;
+	height: 50px;
 }
-.pageup{
-   height:50px;
+
+.pageup {
+	height: 50px;
 }
-.pagebottom{
-   height:150px;
+
+.pagebottom {
+	height: 150px;
 }
 /* 내가 쓴 문의 */
-.inqutable-1{
-   width:200px;
+.inqutable-1 {
+	width: 200px;
 }
-.inqutable-3{   
-   width:200px;
+
+.inqutable-3 {
+	width: 200px;
 }
 /* 예약 내역 */
-.restable-1{
-   width:150px;
+.restable-1 {
+	width: 150px;
 }
-.restable-2{
-   width:100px;
+
+.restable-2 {
+	width: 100px;
 }
-.restable-4{
-   width:150px;
+
+.restable-4 {
+	width: 150px;
 }
-.restable-5{
-   width:100px;
+
+.restable-5 {
+	width: 100px;
 }
-.text-align-center{
-   text-align:center;   
+
+.text-align-center {
+	text-align: center;
 }
-.todayreserve{
-   border:4px solid black;
-   margin:10px;
+
+.todayreserve {
+	border: 4px solid black;
+	margin: 10px;
 }
-.todayreserve-imgbox{
-   text-align:center;
+
+.todayreserve-imgbox {
+	text-align: center;
 }
-.todayreserve-imgbox img{
-   margin:10px;
+
+.todayreserve-imgbox img {
+	margin: 10px;
 }
-.todayreserve-detailbox{
-   text-align:center;
-   border:1px solid black;
-   margin:30px;
+
+.todayreserve-detailbox {
+	text-align: center;
+	border: 1px solid black;
+	margin: 30px;
 }
-.todayreserve-detailbox b{
-   font-size:20px;
+
+.todayreserve-detailbox b {
+	font-size: 20px;
 }
-.my-photo{
-   object-fit:cover;
-   object-position:top;
-   border-radius:50%;
+
+.my-photo {
+	object-fit: cover;
+	object-position: top;
+	border-radius: 50%;
 }
-.redfont-reserve{
-   color:red;
-   font-size:30px;
+
+.redfont-reserve {
+	color: red;
+	font-size: 30px;
 }
 
 /* 내가 쓴 리뷰 */
-.revtable-1{
-   width:200px;
+.revtable-1 {
+	width: 200px;
 }
-.revtable-3{
-   width:150px;
+
+.revtable-3 {
+	width: 150px;
 }
 /* 내 구매목록 */
-.ordertable-1{
-	width:200px;
+.ordertable-1 {
+	width: 200px;
 }
-.ordertable-4{
-	width:200px;
+
+.ordertable-4 {
+	width: 200px;
 }
 /* 회원탈퇴 */
-.redbtn-delete{
-   width:400px;
-   height:40px;
-   background:#bb2d3b;
-   color:white;
-   border-style:none;
-   cursor:pointer
-}
-.helpbox{
-   float:right;
-   margin-top:10px;
-   margin-right:100px;
-}
-.photo-box-delete{
-   width:200px;
-   margin-left:330px;
-   margin-bottom:50px;
-}
-#delete_form{
-   width:600px;
-   margin:0 auto;
-   padding:10px 10px 10px 30px;
-}
-#delete_form ul li{
-   margin-bottom:10px;
+.redbtn-delete {
+	width: 400px;
+	height: 40px;
+	background: #bb2d3b;
+	color: white;
+	border-style: none;
+	cursor: pointer;
+	margin-left:17%;
+	margin-top:20px;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* 여기 밑은 ㄴ  */
-
-
-
-
-
-
-
-
-/* 
-
-전체 레이아웃
-------------------------
-body{
-   width:960px;
-   margin:0 auto;
-   background:#E6E6E6;
-}
-a:link{
-   text-decoration:none;
-   color:#000000;
-}
-a:visited{
-   text-decoration:none;
-   color:#000000;
-}
-a:hover{
-   text-decoration:none;
-   color:#6C6C6C;
+.helpbox {
+	float: right;
+	margin-top: 10px;
+	margin-right: 100px;
+	margin-bottom: 40px;
 }
 
-페이지 레이아웃
----------------------
-.page-main{
-   background:#FFFFFF;
-   margin:40px 0;
-   border-radius:5px;
-   box-shadow:0 2px 6px rgba(100,100,100,0.3);
-   min-height:650px;
+.photo-box-delete {
+	width: 100%;
+	height: 350px;
+	background-color: #cce0de;
+	margin-bottom: 50px;
+	display:flex;
 }
-.content-main{
-   padding:10px 20px;
+.photo-box-delete-a {
+	width:200px;
+	margin:auto;
 }
-
-공통 메시지
---------------------
-.result-display{
-   width:400px;
-   height:200px;
-   margin:50px auto;
-   border:1px solid #000;
-   display:flex;하위 요소를 수직으로 쌓을 수 있는 공간을 만듬
-   align-items:center;세로 정렬
-   justify-content:center;가로 정렬   
+#delete_form {
+	width:	 600px;
+	margin: 0 auto;
+	padding: 10px 10px 10px 30px;
 }
 
-공통 정렬
---------------------
-.align-center{
-   text-align:center;
+#delete_form ul li {
+	margin-bottom: 10px;
+	margin-left:30%;
 }
-.align-right{
-   text-align:right;
+#passwd{
+	margin-left:37px;
 }
-
-메뉴
--------------------
-#main_logo{
-   padding-top:20px;
-}
-#main_nav{
-   padding:2px 10px 20px 10px;
-   height:20px;
-   background-color:#C1BFBF;
-}
-#main_nav ul{
-   list-style:none;
-   margin:0;
-   padding:0;
-}
-#main_nav ul li{
-   display:inline-block;
-   width:100px;
-   text-align:center;
-   vertical-align:middle;
-   padding-top:8px;
-}
-#main_nav ul li img.my-photo{
-   vertical-align:middle;
-}
-#main_nav ul li.menu-profile{
-   padding-top:5px;
-   width:25px;
-}
-#main_nav ul li.menu-logout{
-   width:150px;
-   text-align:left;
-}
-
-메인
-----------------------
-
-공통 등록, 수정 폼
-----------------------
-form{
-   width:600px;
-   margin:0 auto;
-   border:1px solid #000;
-   padding:10px 10px 10px 30px;
-}
-form ul li{
-   clear:both;
-}
-form ul li label{
-   width:130px;
-   float:left; 태그를 왼쪽으로 정렬
-}
-ul{
-   list-style:none;
-}
-input{
-   margin-top:4px;
-}
-input[type="text"],input[type="password"],input[type="email"]{
-   width:310px;
-}
-#register_form input[id="id"]{
-   width:223px;
-}
-input[id="zipcode"]{
-   width:205px;
-}
-input[type="number"]{
-   width:100px;
-}
-.form-notice{
-   margin-left:130px;
-}
-
-로그인
--------------------
-#login_form #id,#login_form #passwd{
-   width:200px;
-}
-
-
-
-공통 목록
--------------------
-form#search_form{
-   border:none;
-}
-ul.search{
-   width:340px;
-   list-style:none;
-   padding:0;
-   margin:0 auto;
-}
-ul.search li{
-   margin:0 0 9px 0;
-   padding:0;
-   display:inline;
-}
-.list-space{
-   margin-bottom:10px;
-}
-table{
-   width:100%;
-   border:1px solid #000;
-   border-collapse:collapse;
-   margin-top:5px;
-}
-table td,table th{
-   border:1px solid #000;
-   padding:5px;
-}
-
-회원관리 목록
--------------------
-
-게시판 글 상세
--------------------
-ul.detail-info{
-   list-style:none;
-}
-ul.detail-info li{
-   display:inline-block;
-}
-.detail-img{
-   max-width:500px;
-}
-ul.detail-sub{
-   list-style:none;
-   margin:0;
-   padding:0;
-}
-ul.detail-sub li{
-   display:inline-block;
-   width:49%;
-   height:50px;
-   vertical-align:middle;
-}
-ul.detail-sub li:first-child img{
-   vertical-align:middle;
-}
-ul.detail-sub li:last-child{
-   text-align:right;
-   line-height:250%;
-}
-#output_fav{
-   cursor:pointer;
-}
-div#reply_div{
-   padding:5px 10px 40px 10px;
-   margin-top:10px;
-   background-color:#EEEEEE;
-}
-form#re_form{
-   width:650px;
-   border:none;
-}
-span.re-title{
-   color:#000;
-   font-size:12pt;
-   line-height:200%;
-}
-span.letter-count{
-   font-size:10pt;
-   color:#999;
-}
-textarea.rep-content{
-   width:90%;
-   height:50px;
-   margin:10px 10px;
-}
-div#re_first, div#mre_first{
-   float:left;
-   width:70%;
-   padding-left:15px;
-   margin-bottom:10px;
-}
-div#re_second, div#mre_second{
-   float:left;
-   width:19%;
-   margin-bottom:10px;
-}
-div#loading{
-   text-align:center;
-}
-div.paging-button{
-   text-align:right;
-}
-div#output{
-   clear:both;
-}
-form#mre_form{
-   border:none;
-   margin:5px;
-}
- */
