--- a/boardGameCafe/src/main/webapp/css/style_hyem.css
+++ b/boardGameCafe/src/main/webapp/css/style_hyem.css
@@ -5,140 +5,144 @@
       font-family: "DungGeunMo";
 }
 
-/* 전체 레이아웃 */
 *{
 	font-family: "DungGeunMo";
+	margin: 0px;
+	padding: 0px;
 }
 
-body{
+/* modal */
+#modal.modal-overlay {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	left: 0;
+	top: 0;
+	display: none;
+	align-items: center;
+	justify-content: center;
+	background: rgba(255, 255, 255, 0.25);
+	backdrop-filter: blur(1.5px);
+}
+      
+#modal .modal-window {
+	background: rgba(255, 255, 255, 0.7);
+	box-shadow: 5px 5px rgb(73, 73, 73);
+	backdrop-filter: blur(13.5px);
+	border: 1px solid #000;
+	width: 300px;
+	position: relative;
+	top: -100px;
+	padding: 10px;
+	text-align: center;
+}
+        
+#modal .modal-content {
+	margin-top: 30px;
+	padding: 0px 10px;
+	color: #000;
+}
+        
+#modal .confirm-btn{
+	margin: 30px 0;
+}
+
+/* content */
+.page-main{
 	width: 1000px;
 	margin: 0 auto;
-	/*background: #9673cd;*/
+	margin-top: 50px;
+}
+
+.page-main h2{
+	font-size: 30px;
+	margin-left: 20px;
+	margin-bottom: 50px;
+}
+
+.btn{
+	width: 100px;
+	height: 25px;
+	border-radius: 0;
 	background: #fff;
+	border: 1px solid #000;
+	box-shadow: 3px 3px rgb(73, 73, 73);
+	font-size: 15px;
+	cursor: pointer;
 }
 
-a:link{
+/* 테이블 */
+table{
+	width: 100%;
+	border-collapse: collapse;
+}
+
+table td{
+	padding: 10px 0;
+	text-align: center;
+	font-size: 15px;
+}
+
+table a:link{
 	text-decoration: none;
-	color: #000000;
+	color: #000;
 }
 
-a:visited{
+table a:visited{
 	text-decoration: none;
-	color: #000000;
+	color: #000;
 }
 
-a:hover{
+table a:hover{
 	text-decoration: none;
-	color: #6C6C6C;
+	color: #c6c6c6;
+	transition: 0.5s;
 }
 
-/* 페이지 레이아웃 */
-.page-main{
-	background: #FFFFFF;
-	margin: 40px 0;
-	/*box-shadow: 10px 10px rgba(73, 73, 73, 1.0);*/
-	min-height: 650px;
+.border-bot{
+	border-bottom: 1px solid #000;
 }
 
-.content-main{
-	padding: 10px 20px;
+.border-bot th{
+	font-size: 16px;
+	padding: 15px 0;
 }
 
-/* 공통 정렬 */
+.table-content-bot{
+	border-bottom: 1px solid #c7c7c7;
+}
+
+.table-content-bot:last-child{
+	border-bottom: 0px;
+}
+
+/* 페이지 */
+.paging{
+	margin-top: 10px;
+}
+
+.paging a:link{
+	text-decoration: none;
+	color: #000;
+}
+
+.paging a:visited{
+	text-decoration: none;
+	color: #000;
+}
+
+.paging a:hover{
+	text-decoration: none;
+	transition: 0.5s;
+}
+
+/* 정렬 */
 .align-center{
 	text-align: center;
 }
 
 .align-right{
 	text-align: right;
-}
-
-/* 공통 등록, 수정 폼 */
-form{
-	width: 600px;
-	margin: 0 auto;
-	border: 1px solid #000;
-	padding: 10px 10px 10px 30px;
-}
-
-form ul li{
-	clear: both;
-}
-
-form ul li label{
-	width: 130px;
-	float: left; /*태그를 왼쪽으로 정렬*/
-}
-
-ul{
-	list-style: none;
-}
-
-input{
-	margin-top: 4px;
-}
-
-input[type="text"],input[type="password"],input[type="email"]{
-	width: 310px;
-}
-
-#register_form input[id="id"]{
-	width: 223px;
-}
-
-input[id="zipcode"]{
-	width: 205px;
-}
-
-input[type="number"]{
-	width: 100px;
-}
-
-.form-notice{
-	margin-left: 130px;
-}
-
-/* 공통 목록 */
-form#search_form{
-	border: none;
-}
-
-ul.search{
-	width: 340px;
-	list-style: none;
-	padding: 0;
-	margin: 0 auto;
-}
-
-ul.search li{
-	margin: 0 0 9px 0;
-	padding: 0;
-	display: inline;
-}
-
-.list-space{
-	margin-bottom: 10px;
-}
-
-table{
-	width: 100%;
-	border: 1px solid #000;
-	border-collapse: collapse;
-	margin-top: 5px;
-}
-
-table td,table th{
-	border: 1px solid #000;
-	padding: 5px;
-}
-
-/* 공통 메시지 */
-.result-display{
-	width: 400px;
-	height: 200px;
-	margin: 50px auto;
-	border: 1px solid #000;
-	display: flex;/*하위 요소를 수직으로 쌓을 수 있는 공간을 만듬*/
-	align-items: center;/*세로 정렬*/
-	justify-content: center;/*가로 정렬*/	
+	margin-right: 10px;
+	margin-top: 10px;
 }
