--- a/boardGameCafe/src/main/webapp/css/style_seul.css
+++ b/boardGameCafe/src/main/webapp/css/style_seul.css
@@ -7,28 +7,65 @@ body{
 	background: #fff;
 }
 
-/* 검색 폼
---------------------- */
-ul {
-    list-style:none;
-}
-li {
-    float: left;
-}
-
-
-
-/* 페이지 레이아웃
+/* 게임 소개
 --------------------- */
 
-/* 공통 메시지
+/* 검색 폼 */
+form#search_form{
+	border:none;
+}
+ul.search{
+	width:340px;
+	list-style:none;
+	padding:0;
+	margin:0 auto;
+}
+ul.search li{
+	margin:0 0 9px 0;
+	padding:0;
+	display:inline;
+}
+/* 관리자 게임등록 */
+.gameadmin a{
+	text-decoration:none;
+	color: gray;
+}
+/* 게임들 */
+.image-space .horizontal-area{
+	margin:2px;
+	padding:3px;
+	width:220px;
+	height:240px;
+	float:left;
+	overflow:hidden;
+	text-align:center;
+}
+.image-space .horizontal-area img{
+	width:215px;
+	height:195px;
+}
+.image-space .float-clear{
+	clear:both;
+}
+.image-space .horizontal-area a{
+	text-decoration:none;
+	color:black;
+}
+.image-space .horizontal-area #gname{
+	font-size: 25px;
+}
+/* 페이지번호 */
+.align-center{
+	text-align:center;
+}
+
+
+/* 게임상세
 -------------------- */
-
-/* 공통 정렬
--------------------- */
-
-/* 메뉴
-------------------- */
-
-/* 메인
----------------------- */
+.detailpage-main{
+	margin:0 auto;
+	color:red;
+}
+.image-detail{
+	text-align:center;
+}
