--- a/boardGameCafe/src/main/webapp/css/style_0g.css
+++ b/boardGameCafe/src/main/webapp/css/style_0g.css
@@ -1,1 +1,53 @@
 @charset "UTF-8";
+
+.main-title{
+	width: 100%;
+	height: 100px;
+	display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size:20px;
+    border-bottom:solid 0.5px;
+}
+.main-content{
+	display: inline-block;
+	width: 100%;
+	text-align: center;
+	margin-top:20px;
+}
+
+/*admin_reslist.jsp*/
+ul{
+	list-style: none;
+}
+.main_ul{
+	cursor: pointer;
+}
+.hide{
+	display: none;
+}
+
+/*admin_memdetail*/
+ul li{
+	margin-bottom:5px;
+}
+ul li label{
+	width: 90px;
+	float: left;
+}
+ul li input{
+	width: 200px;
+}
+input[id="auth"]{
+	width:135px;
+}
+select[name="mem_auth"]{
+	width: 144px;
+	height: 22px;
+}
+#update_auth{
+	width:60px;
+}
+#submit_auth{
+	width:60px;
+}
