장바구니 목록 수정

--- a/boardGameCafe/src/main/webapp/css/style_ahn.css
+++ b/boardGameCafe/src/main/webapp/css/style_ahn.css
@@ -45,21 +45,18 @@ li a:hover{
 }
 /*-----------------------------------------*/
 
-div.page-main{
-	
-}
+
 div.content-photo{
 	height:1070px;
 	align:center;
-	background-image: url('../images/soon/background.jpg');
-	background-repeat:no-repeat;;
-	background-size:100%; 
 	background-attachment:scroll;
 	padding: 50px;
 }
 div.cart-main{
+	background-color: rgba(150,150,150,0.1);
 	float:left;
 	width:65%;
+	min-height:300px;
 }
 div.cart-side{
 	float:right;
@@ -68,16 +65,18 @@ div.cart-side{
 	padding:0 0 0 10px;
 }
 div.cart-sub{
+	background-color: rgba(150,150,150,0.1);
 	float:none;
-	border:1px solid #000;
+	min-height:200px;
 }
 div.price-total{
+	background-color: rgba(150,150,150,0.1);
 	float:none;
 	margin:20px 0 0 0;
 	border:1px solid #000;
 }
 div.result-display{
-	background-color: rgba(255,255,255,0.7);
+	background-color: rgba(0,0,0,0.1);
 	width:400px;
 	height:200px;
 	margin:0 auto;
@@ -88,19 +87,17 @@ div.result-display{
 }
 .result-name{
 	background-color: rgba(255,255,255,0.7);
-	margin:0 0 0 10px;
 	width:30%;
 	display:flex;/*하위 요소를 수직으로 쌓을 수 있는 공간을 만듬*/
 	align-items:center;/*세로 정렬*/
-	justify-content:center;/*가로 정렬*/
-	margin: 0 0 100px 0;
+	justify-content:left;/*가로 정렬*/
+	margin: 0 0 50px 0;
 }
 .result{
-	background-color: rgba(255,255,255,0.7);
-	width:80%;
+	border:1px solid #000;
+	width:100%;
 	height:40%;
 	margin:0 auto;
-	border:1px solid #000;
 	display:flex;/*하위 요소를 수직으로 쌓을 수 있는 공간을 만듬*/
 	align-items:center;/*세로 정렬*/
 	justify-content:center;/*가로 정렬*/	
@@ -114,4 +111,11 @@ div.result-display{
 .cart-del:hover{
 	text-decoration:none;
 	border: 2px solid #000;
+}
+#cart_order{
+	width: 98%;
+}
+
+.shopping{
+	margin: 10px auto;
 }
