--- a/boardGameCafe/src/main/webapp/css/style_seul.css
+++ b/boardGameCafe/src/main/webapp/css/style_seul.css
@@ -13,9 +13,11 @@ body{
 /* 검색 폼 */
 form#search_form{
 	border:none;
+	padding-top:10;
+	padding-bottom: 5;
 }
 ul.search{
-	width:340px;
+	width:440px;
 	list-style:none;
 	padding:0;
 	margin:0 auto;
@@ -25,15 +27,20 @@ ul.search li{
 	padding:0;
 	display:inline;
 }
+
 /* 관리자 게임등록 */
 .gameadmin a{
 	text-decoration:none;
 	color: gray;
 }
-/* 게임들 */
+/* 게임목록 */
+.page-main{
+	margin: 0 auto;
+}
 .image-space .horizontal-area{
 	margin:2px;
 	padding:3px;
+	padding-bottom:10px;
 	width:220px;
 	height:240px;
 	float:left;
@@ -47,18 +54,21 @@ ul.search li{
 .image-space .float-clear{
 	clear:both;
 }
+.image-space .float-clear{
+	clear:both;
+}
 .image-space .horizontal-area a{
 	text-decoration:none;
 	color:black;
 }
-.image-space .horizontal-area #gname{
-	font-size: 25px;
+.gname{
+	font-size: 15;
 }
-/* 페이지번호 */
+/* 페이지 번호 */
 .align-center{
 	text-align:center;
 }
-
+/* 강사님 */
 
 /* 게임상세
 -------------------- */
