--- a/boardGameCafe/src/main/webapp/css/style_ddk.css
+++ b/boardGameCafe/src/main/webapp/css/style_ddk.css
@@ -50,26 +50,35 @@ ul {
 	object-fit: cover;
 	object-position: top;
 	border-radius: 50%;
+	box-shadow: 3px 3px 3px black;
 }
 
 .bluebtn {
 	background: #2bac5f;
 	color: white;
 	border-style: none;
-	border-radius: 15px;
 	cursor: pointer;
-	margin-left:20px;
+	
 	padding:5px;
+	box-shadow: 3px 3px 3px rgb(73 73 73);
 }
-
+.bluebtn-mypage {
+	background: #2bac5f;
+	color: white;
+	border-style: none;
+	cursor: pointer;
+	margin-left:25px;
+	padding:5px;
+	box-shadow: 3px 3px 3px rgb(73 73 73);
+}
 .redbtn {
 	background: #bb2d3b;
 	color: white;
 	border-style: none;
-	border-radius: 15px;
 	cursor: pointer;
 	margin:30px;
 	padding:5px;
+	box-shadow: 3px 3px 3px rgb(73 73 73);
 }
 
 #myname {
@@ -98,12 +107,12 @@ ul {
 .allbox1 {
 	width: 100%;
 	height: 350px;
-	background-color: #cce0de;
 	margin-left: 0px;
 	text-align: center;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	border-bottom:2px solid lightgrey;
 }
 
 .allbox2 {
@@ -122,18 +131,20 @@ ul {
 }
 
 #mypage01 {
-	border: 4px solid lightgrey;
+	border: 4px solid black;
 	width: 150px;
 	height: 150px;
 	margin-right: 20px;
 	border-radius: 15px;
+	box-shadow: 3px 3px 3px rgb(73 73 73);
 }
 
 #mypage02 {
-	border: 4px solid lightgrey;
+	border: 4px solid black;
 	width: 150px;
 	height: 150px;
 	border-radius: 15px;
+	box-shadow: 3px 3px 3px rgb(73 73 73);
 }
 
 .mypage-line1-a {
@@ -163,14 +174,14 @@ ul {
 }
 
 .mypage-line2 {
-	border: 4px solid lightgrey;
+	border: 4px solid black;
 	width: 500px;
 	height: 50px;
 	margin-bottom: 20px;
-	border-radius: 15px;
 	display:flex;
 	align-items:center;
 	padding-left:15px;
+	box-shadow: 3px 3px 3px rgb(73 73 73);
 }
 
 .Withdrawal {
@@ -181,12 +192,12 @@ ul {
 .allbox1-modify {
 	width: 100%;
 	height: 350px;
-	background-color: #cce0de;
-	margin-left: 0px;
+	margin-left: 50px;
 	text-align: center;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	border-bottom:2px solid lightgrey;
 }
 #div01-modify {
 	float: left;
@@ -199,9 +210,11 @@ ul {
 	width: 400px;
 	display: flex;
 }
+.submit-reset-btn{
+	padding-right:84px;	
+}
 .modify-profile{
 	width:300px;
-	padding-left:100px;
 }
 .float-end {
 	clear: both;
@@ -240,12 +253,14 @@ ul {
 	margin-left:58px;
 }
 .bluebtn-modify {
-	width: 450px;
-	height: 35px;
-	background: blue;
-	color: white;
-	border-style: none;
-	cursor: pointer
+    width: 450px;
+    height: 35px;
+    border: 1px solid #000;
+    box-shadow: 3px 3px grey;
+    background: black;
+    color: white;
+    border-style: none;
+    cursor: pointer;
 }
 /* 비밀번호 수정  */ /* 사진, 백그라운드-칼라 -> 회원삭제 거 가져옴  */
 #password_form {
@@ -255,10 +270,14 @@ ul {
 .modifypw_form-list{
 	padding-left:140px;
 }
+.modifypw_form-list li{
+	margin-top:7px;
+}
 .redbtn-modify {
 	width: 400px;
 	height: 40px;
 	background: #bb2d3b;
+	box-shadow: 3px 3px 3px black;
 	color: white;
 	border-style: none;
 	cursor: pointer;
@@ -332,17 +351,11 @@ ul {
 	font-size: 20px;
 }
 
-.my-photo {
-	object-fit: cover;
-	object-position: top;
-	border-radius: 50%;
-}
 
 .redfont-reserve {
 	color: red;
 	font-size: 30px;
 }
-
 /* 내가 쓴 리뷰 */
 .revtable-1 {
 	width: 200px;
@@ -364,6 +377,7 @@ ul {
 	width: 400px;
 	height: 40px;
 	background: #bb2d3b;
+	box-shadow: 3px 3px 3px black;
 	color: white;
 	border-style: none;
 	cursor: pointer;
@@ -381,9 +395,9 @@ ul {
 .photo-box-delete {
 	width: 100%;
 	height: 350px;
-	background-color: #cce0de;
 	margin-bottom: 50px;
 	display:flex;
+	border-bottom:2px solid lightgrey;
 }
 .photo-box-delete-a {
 	width:200px;
